# coffea

./: .buildinfo  .cirrus.yml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  codecov.yml  concepts.html  dataset_tools.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg  setup.py  skyhook.md  wq.html
.github/: dependabot.yml
_images/: inheritance-03370c5c9fa500f1924b4abd9bd0b7adbac00e6c.png.map  inheritance-1109f4aec4301c1df165530e8b2f3b8c8cc50109.png.map  inheritance-27a321d9ec45cb2cd5502218088ee320767b27eb.png.map  inheritance-2b40c6d05ed1b536aff813390875329435150dde.png.map  inheritance-31f0ad7408c4235c3cce168531a47585d9ca3f39.png.map  inheritance-3ab19101a15df6f677d6a144f11e52395ef50918.png.map  inheritance-40140eef58547eb2a63056fdfff75b2ca0cb7c47.png.map  inheritance-47ba52d4cefbafb6a25233fb9cfae1b30be7fa5d.png.map  inheritance-5c8d2f5338dae3b2e05b07daedc642021fa0c01b.png.map  inheritance-62339e7e3c9c4b2bdcc321c51904b9cb51d977f0.png.map  inheritance-74d147d7ca00827cfb7d1ec9f1427731a936f77e.png.map  inheritance-7552759f68908f5ca0ba472470bf4099b1cf4ba6.png.map  inheritance-7878c1a6cb6949ec5f38bbc966606e1acd8d716c.png.map  inheritance-93f2834026f21f61fd5462da08779a2b36092e12.png.map  inheritance-972efc39213da64433d9f54535d2633cbf0b9492.png.map  inheritance-97a302fc26484a4a5046b140ffdfc0b0e88ac28f.png.map  inheritance-b11f2d842e78e1a425057c04c4153a33e0521e85.png.map  inheritance-b34d504ec1bfe5214eb49828384d48289e8767fb.png.map  inheritance-b4a78a1e3229c8f1aad80ef9f2106d165a264da6.png.map  inheritance-b611f7d0e8cf385772cce3c879cd8b34a2da237c.png.map  inheritance-bf0acc160c66439e069b18773fe00fc2d0ff4359.png.map  inheritance-bfb9f3967431307b1219409b5a30467913b8873c.png.map  inheritance-c1b1209f713b12400c7e24960dc64eaf8ae1042d.png.map  inheritance-c22c712251ea4935d62cd3cac798594d309af997.png.map  inheritance-c43c1ab5b413b491413fd3fb738e9f6498537df3.png.map  inheritance-c4bf4b316da28d3c1d8ee76c61817c48ac28d7e0.png.map  inheritance-c5e0346a2520e8da3bf58b73c77163bfcd1f7912.png.map  inheritance-c61e61501491f3fdbe125b3ba746ad47d3158fc3.png.map  inheritance-ca8839e72c928fa7dc22d270686845af645272a2.png.map  inheritance-d1d8fa6b162e090f70a24f933b189942f2e2e5db.png.map  inheritance-d39ddcacd300a77f4f00b38b3706b454f2bb2405.png.map  inheritance-da164d4690f7ca5c8a2fcc89976648efc000c84c.png.map  inheritance-df663a624675c4aff60292e9d36b34aeba3d0470.png.map  inheritance-e956ff83bd146443e12738b4f284f7555af5c42b.png.map  inheritance-ed09a122e9c005ca66131bf7da2dffa6c64be7d0.png.map  inheritance-f7e6bf9fb6123bdf472483821d3a348e3b0af5fe.png.map
_sources/: concepts.rst.txt  dataset_tools.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  reference.rst.txt  wq.rst.txt
_static/: copybutton.js  documentation_options.js
api/: coffea.analysis_tools.Cutflow.html  coffea.analysis_tools.CutflowToNpz.html  coffea.analysis_tools.NminusOne.html  coffea.analysis_tools.NminusOneToNpz.html  coffea.analysis_tools.PackedSelection.html  coffea.analysis_tools.WeightStatistics.html  coffea.analysis_tools.Weights.html  coffea.btag_tools.BTagScaleFactor.html  coffea.dataset_tools.apply_to_dataset.html  coffea.dataset_tools.apply_to_fileset.html  coffea.dataset_tools.filter_files.html  coffea.dataset_tools.get_failed_steps_for_dataset.html  coffea.dataset_tools.get_failed_steps_for_fileset.html  coffea.dataset_tools.max_chunks.html  coffea.dataset_tools.max_files.html  coffea.dataset_tools.preprocess.html  coffea.dataset_tools.slice_chunks.html  coffea.dataset_tools.slice_files.html  coffea.hist.Bin.html  coffea.hist.Cat.html  coffea.hist.Hist.html  coffea.hist.Interval.html  coffea.hist.StringBin.html  coffea.hist.clopper_pearson_interval.html  coffea.hist.export1d.html  coffea.hist.normal_interval.html  coffea.hist.plot1d.html  coffea.hist.plot2d.html  coffea.hist.plotgrid.html  coffea.hist.plotratio.html  coffea.hist.poisson_interval.html  coffea.jetmet_tools.CorrectedJetsFactory.html  coffea.jetmet_tools.CorrectedMETFactory.html  coffea.jetmet_tools.FactorizedJetCorrector.html  coffea.jetmet_tools.JECStack.html  coffea.jetmet_tools.JetCorrectionUncertainty.html  coffea.jetmet_tools.JetResolution.html  coffea.jetmet_tools.JetResolutionScaleFactor.html  coffea.lookup_tools.evaluator.html  coffea.lookup_tools.extractor.html  (+85 more)
binder/: accumulators.ipynb  applying_corrections.ipynb  baconbits-hist-export.ipynb  baconbits-hist-plot.ipynb  baconbits-hist.ipynb  coffea  dataset_discovery.ipynb  environment.yml  fnal_column_analysis_tools  histograms.ipynb  mltools.ipynb  muonspectrum_v1.ipynb  muonspectrum_v2.ipynb  muonspectrum_v3.ipynb  muonspectrum_v4.ipynb  muonspectrum_v4_parsl.ipynb  muonspectrum_v4_spark.ipynb  nanoevents.ipynb  nanoevents1.ipynb  nanoevents_pq.ipynb  packedselection.ipynb  plotting-demo.ipynb  processor.ipynb  requirements.txt  setup_env_accre.sh  systematics.ipynb  systematics_wip.ipynb
coffea/: __init__.py  analysis_tools.py  logger.py  util.py  version.py
docs/: Makefile  build_docs.sh
fnal_column_analysis_tools/: __init__.py  util.py  version.py
modules/: coffea.analysis_tools.html  coffea.btag_tools.html  coffea.dataset_tools.html  coffea.hist.html  coffea.jetmet_tools.html  coffea.lookup_tools.html  coffea.lumi_tools.html  coffea.ml_tools.html  coffea.nanoevents.html  coffea.nanoevents.methods.base.html  coffea.nanoevents.methods.candidate.html  coffea.nanoevents.methods.nanoaod.html  coffea.nanoevents.methods.vector.html  coffea.processor.html  coffea.util.html
notebooks/: accumulators.html  accumulators.ipynb  applying_corrections.html  dataset_discovery.html  histograms.html  histograms.ipynb  mltools.html  nanoevents.html  packedselection.html  packedselection.ipynb  processor.html
tests/: conftest.py  dummy_distributions.py  edm4hep_index_shaping_test.py  make_expected_lookup.py  ml_tools.py  test_arrays.py  (+42 more)
(+539 files in other folders)
