[metadata]
name = coffea
description = Tools for doing Collider HEP style analysis with columnar operations
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/CoffeaTeam/coffea
author = Lindsey Gray (Fermilab)
author_email = lagray@fnal.gov
maintainer = Lindsey Gray (Fermilab)
maintainer_email = lagray@fnal.gov
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities
download_url = https://github.com/CoffeaTeam/coffea/releases

[options]
python_requires = >=3.7

[tool:pytest]
addopts = -rfesxX -v
testpaths =
    tests

[mypy]
files = src
python_version = 3.8
ignore_missing_imports = True

[check-manifest]
ignore =
    binder/coffea
